23-December-2011 Michael Babker
! Raise minimum version to Joomla! 2.5

1-December-2011 Michael Babker
+ Add option to enable/disable logging

29-November-2011 Michael Babker
- Remove jimport calls supported by autoloader
! Raise minimum version to Joomla! 1.7.3 + Platform 11.3 due to code removal
~ Change feed view class names (breaks template BC)

15-November-2011 Michael Babker
- Remove cache option for RSS feed

14-November-2011 Michael Babker
! Security fixes for media component from J! 1.7.3
# [#26] Fix front-end filter
+ [#27] Add Author to front-end grid
~ Update batch processing

26-October-2011 Michael Babker
+ Allow all feeds to be displayed in front end views
~ Merge deprecated branch into 2.0-wip branch
! Raise minimum version to Joomla! 1.7.1 due to deprecated code removal
- Remove JFormFieldFeedFilter and use JHtmlPodcast::feeds instead

25-October-2011 Michael Babker
~ Add podcastmedia plugin to ARP and build process

11-September-2011 Michael Babker
- Remove deprecated scriptfile methods

10-September-2011 Michael Babker
+ Add method to check permissions on all feeds

25-August-2011 Michal Babker
+ Add ACL to the podcast level
~ Code review on feed ACL
~ Update getActions to handle permissions checks, update views permissions checks

23-August-2011 Michael Babker
+ First pass at adding ACL to feed level