@@ -137,6 +137,18 @@
 				</filterchain>
             </copy>
 
+		<echo msg="Create plg_finder_podcastmanager_feeds package" />
+            <mkdir dir="packaging/staging" />
+            <copy todir="packaging/staging/plg_finder_podcastmanager_feeds">
+                <fileset dir="plg_finder_podcastmanager_feeds" />
+				<filterchain>
+					<replacetokens begintoken="##" endtoken="##">
+						<token key="DATE" value="${build.date}" />
+						<token key="VERSION" value="${version}" />
+					</replacetokens>
+				</filterchain>
+            </copy>
+
 		<echo msg="Create plg_podcastmedia_user package" />
             <mkdir dir="packaging/staging" />
             <copy todir="packaging/staging/plg_podcastmedia_user">
@@ -198,6 +210,7 @@
 		<zip destfile="packaging/packages/mod_podcastmanagerfeed.zip" basedir="packaging/staging/mod_podcastmanagerfeed" />
 		<zip destfile="packaging/packages/plg_content_podcastmanager.zip" basedir="packaging/staging/plg_content_podcastmanager" />
 		<zip destfile="packaging/packages/plg_editors-xtd_podcastmanager.zip" basedir="packaging/staging/plg_editors-xtd_podcastmanager" />
+		<zip destfile="packaging/packages/plg_finder_podcastmanager_feeds.zip" basedir="packaging/staging/plg_finder_podcastmanager_feeds" />
 		<zip destfile="packaging/packages/plg_podcastmedia_user.zip" basedir="packaging/staging/plg_podcastmedia_user" />
 	</target>
 
