@@ -1,0 +1,7 @@
+; Podcast Manager for Joomla!
+; Copyright (C) 2011 Michael Babker. All rights reserved.
+; Note : All ini files need to be saved as UTF-8 - No BOM
+; Double quotes in the values have to be formatted as "_QQ_"
+
+PLG_FINDER_PODCASTMANAGER_FEEDS="Smart Search - Podcast Manager Feeds"
+PLG_FINDER_PODCASTMANAGER_FEEDS_XML_DESCRIPTION="This plugin indexes Podcast Manager Feeds."
