@@ -1,5 +1,6 @@
 23-December-2011 Michael Babker
 ! Raise minimum version to Joomla! 2.5
++ Add Finder plugin for feeds
 
 1-December-2011 Michael Babker
 + Add option to enable/disable logging
